import React from 'react'
import { render, screen } from '@testing-library/react-native'
import MpxText from '../../../lib/runtime/components/react/mpx-text'

// Mock mpx-portal
jest.mock('../../../lib/runtime/components/react/mpx-portal', () => {
  // eslint-disable-next-line @typescript-eslint/no-var-requires
  const mockReact = require('react')
  // eslint-disable-next-line @typescript-eslint/no-var-requires
  return mockReact.forwardRef((props: any, ref: any) => {
    return mockReact.createElement('View', { ...props, ref })
  })
})

describe('MpxText', () => {
  // 综合基础功能测试
  it('should handle basic rendering, nested text and selection properties', () => {
    const { rerender, toJSON } = render(
      <MpxText
        testID="basic-text"
        style={{
          fontSize: 16,
          color: '#333',
          fontWeight: 'bold'
        }}
      >
        Hello World
      </MpxText>
    )

    // 基础文本渲染测试
    let textElement = screen.getByTestId('basic-text')
    expect(textElement).toBeTruthy()
    expect(screen.getByText('Hello World')).toBeTruthy()

    // 测试嵌套文本组件
    rerender(
      <MpxText testID="basic-text">
        Parent text
        <MpxText style={{ color: 'red' }}>
          Nested text
        </MpxText>
        More parent text
      </MpxText>
    )

    textElement = screen.getByTestId('basic-text')
    expect(textElement).toBeTruthy()

    // 测试文本选择属性
    rerender(
      <MpxText
        testID="basic-text"
        selectable={true}
        allowFontScaling={false}
      >
        Selectable text
      </MpxText>
    )

    textElement = screen.getByTestId('basic-text')
    expect(textElement.props.selectable).toBe(true)
    expect(textElement.props.allowFontScaling).toBe(false)

    // 测试复杂样式转换
    rerender(
      <MpxText
        testID="basic-text"
        style={{
          fontSize: '16px',
          lineHeight: '1.5',
          textAlign: 'center',
          textDecorationLine: 'underline'
        }}
      >
        Complex styled text
      </MpxText>
    )

    textElement = screen.getByTestId('basic-text')
    expect(textElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot()
  })

  // MPX user-select 属性测试
  it('should handle MPX user-select property', () => {
    const { rerender } = render(
      <MpxText
        testID="user-select-text"
        user-select="text"
      >
        User selectable text
      </MpxText>
    )

    let textElement = screen.getByTestId('user-select-text')
    expect(textElement.props.selectable).toBe(true)

    // 测试显式设置 selectable 为 false
    rerender(
      <MpxText
        testID="user-select-text"
        selectable={false}
      >
        Non-selectable text
      </MpxText>
    )

    textElement = screen.getByTestId('user-select-text')
    expect(textElement.props.selectable).toBe(false)
  })

  // Ref 转发测试
  it('should properly forward refs', () => {
    const ref = React.createRef()

    render(
      <MpxText
        ref={ref}
        testID="ref-text"
        selectable={true}
      >
        Ref forwarded text
      </MpxText>
    )

    // 验证 ref 被正确转发
    expect(ref.current).toBeTruthy()
    expect(ref.current).toHaveProperty('getNodeInstance')
    expect(typeof ref.current.getNodeInstance).toBe('function')

    // 验证组件正确渲染
    const textElement = screen.getByTestId('ref-text')
    expect(textElement).toBeTruthy()
    expect(textElement.props.selectable).toBe(true)
  })

  // 基础 Portal 功能测试
  it('should handle Portal functionality', () => {
    const { toJSON } = render(
      <MpxText
        testID="portal-text"
        style={{ fontSize: 16, color: '#333' }}
      >
        Portal text content
      </MpxText>
    )

    const textElement = screen.getByTestId('portal-text')
    expect(textElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('text-with-portal')
  })

  // 简化的上下文测试
  it('should handle external context properties', () => {
    const { toJSON } = render(
      <MpxText
        testID="context-text"
        style={{
          color: '#ff0000',
          fontSize: 16,
          textAlign: 'center'
        }}
      >
        Context styled text
      </MpxText>
    )

    const textElement = screen.getByTestId('context-text')
    expect(textElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('context-text')
  })

  // 父级尺寸上下文测试
  it('should handle parent size context', () => {
    const { toJSON } = render(
      <MpxText
        testID="parent-size-text"
        parent-font-size={18}
        parent-width={300}
        parent-height={200}
        style={{
          fontSize: 18, // 使用具体数值而不是相对值
          width: 150 // 使用具体数值而不是百分比
        }}
      >
        Parent size context text
      </MpxText>
    )

    const textElement = screen.getByTestId('parent-size-text')
    expect(textElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('parent-size-text')
  })

  // 复杂嵌套和样式继承测试
  it('should handle complex nested text with style inheritance', () => {
    const { toJSON } = render(
      <MpxText
        testID="nested-styled-text"
        style={{
          fontSize: 16,
          color: '#333',
          fontWeight: 'bold',
          lineHeight: 1.5
        }}
      >
        Parent text with
        <MpxText style={{ color: 'red', fontStyle: 'italic' }}>
          nested red italic text
        </MpxText>
        and
        <MpxText style={{ textDecorationLine: 'underline', fontSize: 18 }}>
          underlined larger text
        </MpxText>
        back to parent style
      </MpxText>
    )

    const textElement = screen.getByTestId('nested-styled-text')
    expect(textElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('nested-styled-text')
  })

  // 边界值和特殊情况测试
  it('should handle edge cases and special values', () => {
    const { rerender } = render(
      <MpxText testID="edge-text" style={undefined}>
        {null}
        Edge case text
        {false}
        {0}
        {''}
      </MpxText>
    )

    let textElement = screen.getByTestId('edge-text')
    expect(textElement).toBeTruthy()

    // 测试空文本内容
    rerender(
      <MpxText testID="edge-text">
        {''}
      </MpxText>
    )

    textElement = screen.getByTestId('edge-text')
    expect(textElement).toBeTruthy()

    // 测试只有空白字符的文本
    rerender(
      <MpxText testID="edge-text">
        {'\n  \t  \n'}
      </MpxText>
    )

    textElement = screen.getByTestId('edge-text')
    expect(textElement).toBeTruthy()
  })

  // 动态内容更新测试
  it('should handle dynamic content updates', () => {
    const { rerender } = render(
      <MpxText testID="dynamic-text" selectable={true}>
        Initial text
      </MpxText>
    )

    let textElement = screen.getByTestId('dynamic-text')
    expect(screen.getByText('Initial text')).toBeTruthy()

    // 更新文本内容
    rerender(
      <MpxText testID="dynamic-text" selectable={true}>
        Updated text content
      </MpxText>
    )

    textElement = screen.getByTestId('dynamic-text')
    expect(screen.getByText('Updated text content')).toBeTruthy()

    // 更新为嵌套内容
    rerender(
      <MpxText testID="dynamic-text" selectable={true}>
        Parent
        <MpxText>Nested</MpxText>
        Content
      </MpxText>
    )

    textElement = screen.getByTestId('dynamic-text')
    expect(textElement).toBeTruthy()
  })

  // 可访问性和交互测试
  it('should handle accessibility and interaction properties', () => {
    const { toJSON } = render(
      <MpxText
        testID="accessible-text"
        accessible={true}
        accessibilityLabel="Accessible text content"
        accessibilityRole="text"
        selectable={true}
        allowFontScaling={true}
      >
        Accessible and interactive text
      </MpxText>
    )

    const textElement = screen.getByTestId('accessible-text')
    expect(textElement.props.accessible).toBe(true)
    expect(textElement.props.accessibilityLabel).toBe('Accessible text content')
    expect(textElement.props.selectable).toBe(true)
    expect(textElement.props.allowFontScaling).toBe(true)
    expect(toJSON()).toMatchSnapshot('accessible-text')
  })

  // Portal 渲染测试 - 测试 hasPositionFixed 逻辑
  it('should render in Portal when position is fixed', () => {
    const { toJSON } = render(
      <MpxText
        testID="fixed-position-text"
        style={{
          position: 'fixed',
          top: 100,
          left: 50,
          fontSize: 16,
          color: '#333'
        }}
      >
        Fixed position text
      </MpxText>
    )

    // 验证组件正常渲染
    const textElement = screen.getByTestId('fixed-position-text')
    expect(textElement).toBeTruthy()

    // 验证快照，Portal 会影响渲染结构
    expect(toJSON()).toMatchSnapshot('fixed-position-text')
  })

  // 多种样式条件测试
  it('should handle different style conditions that affect Portal usage', () => {
    // 测试 position: absolute（不会触发 Portal）
    const { rerender, toJSON } = render(
      <MpxText
        testID="position-test"
        style={{
          position: 'absolute',
          top: 50,
          left: 50
        }}
      >
        Absolute position text
      </MpxText>
    )

    let textElement = screen.getByTestId('position-test')
    expect(textElement).toBeTruthy()

    // 测试 position: relative（不会触发 Portal）
    rerender(
      <MpxText
        testID="position-test"
        style={{
          position: 'relative',
          top: 10
        }}
      >
        Relative position text
      </MpxText>
    )

    textElement = screen.getByTestId('position-test')
    expect(textElement).toBeTruthy()

    // 测试 position: fixed（会触发 Portal）
    rerender(
      <MpxText
        testID="position-test"
        style={{
          position: 'fixed',
          bottom: 0,
          right: 0,
          zIndex: 999
        }}
      >
        Fixed position text
      </MpxText>
    )

    textElement = screen.getByTestId('position-test')
    expect(textElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('position-conditions-test')
  })

  // 复杂场景下的 Portal 测试
  it('should handle Portal with complex styling and content', () => {
    const { toJSON } = render(
      <MpxText
        testID="complex-portal-text"
        style={{
          position: 'fixed',
          top: '10%',
          left: '20%',
          width: 200,
          height: 50,
          backgroundColor: 'rgba(0,0,0,0.8)',
          color: 'white',
          textAlign: 'center',
          borderRadius: 5,
          padding: 10
        }}
        selectable={true}
        allowFontScaling={false}
      >
        Complex Portal Text
        <MpxText style={{ fontWeight: 'bold', color: 'yellow' }}>
          Nested Content
        </MpxText>
      </MpxText>
    )

    const textElement = screen.getByTestId('complex-portal-text')
    expect(textElement).toBeTruthy()
    expect(textElement.props.selectable).toBe(true)
    expect(textElement.props.allowFontScaling).toBe(false)
    expect(toJSON()).toMatchSnapshot('complex-portal-text')
  })

  // 边界情况：样式动态变化影响 Portal
  it('should handle dynamic style changes affecting Portal usage', () => {
    const { rerender } = render(
      <MpxText
        testID="dynamic-portal-text"
        style={{
          fontSize: 16,
          color: '#333'
        }}
      >
        Normal text
      </MpxText>
    )

    let textElement = screen.getByTestId('dynamic-portal-text')
    expect(textElement).toBeTruthy()

    // 动态改变为 fixed 定位（会触发 Portal）
    rerender(
      <MpxText
        testID="dynamic-portal-text"
        style={{
          position: 'fixed',
          top: 0,
          left: 0,
          fontSize: 16,
          color: '#333',
          backgroundColor: 'yellow'
        }}
      >
        Now fixed text
      </MpxText>
    )

    textElement = screen.getByTestId('dynamic-portal-text')
    expect(textElement).toBeTruthy()

    // 再次改变为普通样式
    rerender(
      <MpxText
        testID="dynamic-portal-text"
        style={{
          fontSize: 18,
          color: 'blue'
        }}
      >
        Back to normal
      </MpxText>
    )

    textElement = screen.getByTestId('dynamic-portal-text')
    expect(textElement).toBeTruthy()
  })

  // useTransformStyle 相关测试
  it('should handle useTransformStyle with various configurations', () => {
    const { toJSON } = render(
      <MpxText
        testID="transform-style-text"
        enable-var={false} // 简化测试，避免变量上下文问题
        parent-font-size={16}
        parent-width={320}
        parent-height={568}
        style={{
          position: 'fixed', // 关键：触发 Portal 逻辑
          fontSize: 18,
          width: 256, // 320 * 80%
          color: '#ff0000',
          backgroundColor: '#f0f0f0',
          padding: 8
        }}
      >
        Transform style text
      </MpxText>
    )

    const textElement = screen.getByTestId('transform-style-text')
    expect(textElement).toBeTruthy()
    expect(toJSON()).toMatchSnapshot('transform-style-text')
  })
})
